<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/date"
        android:id="@+id/textView" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextDate" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TypeOfExpenditure"
        android:id="@+id/textView2" />

    <Spinner
        android:id="@+id/types_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/textView3" />

    <EditText
        android:hint=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/value"
        android:id="@+id/textView4" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextValue" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancelExpenditure"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAddEpenditure"
            android:enabled="false"
            android:width="@dimen/size_of_button"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="#cc0000"
            android:id="@+id/textViewError"
            android:width="@dimen/size_of_button"
            android:layout_below="@+id/buttonCancelExpenditure"
            android:layout_alignParentLeft="true" />


    </RelativeLayout>
</LinearLayout>
