<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTypeActivity"
    tools:ignore="MergeRootFrame" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TypeOfExpenditure"
        android:id="@+id/textView" />

    <EditText
        android:hint=""
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTypeOfExpenditure" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <Button
            android:layout_width="@dimen/size_of_button"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/buttonCancel"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true" />

        <Button
            android:layout_width="@dimen/size_of_button"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:id="@+id/buttonAdd"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true" />
    </RelativeLayout>


</LinearLayout>
